sumo/tests/duarouter/alternatives/style2_input/errors/xml/double_attribute/errors.duarouter
Error: attribute 'probability' is already specified for element 'route'
 In file 'input_alts.rou.alt.xml'
 At line/column 13/57.

Quitting (on error).
